--- a/app/src/main/res/layout/ingredient_item.xml
+++ b/app/src/main/res/layout/ingredient_item.xml
@@ -1,57 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="100dp"
-    android:layout_height="130dp"
-    android:layout_marginStart="@dimen/margin_start_top"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView3"
+<layout>
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:cardCornerRadius="@dimen/corner_radius"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="130dp"
+        android:layout_marginStart="@dimen/margin_start_top">
 
-        <ImageView
-            android:id="@+id/ivIngredient"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView3"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            tools:src="@tools:sample/backgrounds/scenic" />
-    </androidx.cardview.widget.CardView>
+            app:cardCornerRadius="@dimen/corner_radius"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/tvIngredientName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/list_title_recipe"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView3"
-        android:textColor="@color/black"
-        android:fontFamily="@font/lato_light"
-        tools:text="Sugar" />
+            <ImageView
+                android:id="@+id/ivIngredient"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                tools:src="@tools:sample/backgrounds/scenic" />
+        </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:id="@+id/tvIngredientCount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/lato_light"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvIngredientName"
-        tools:text="55"
-        android:textSize="8sp"/>
+        <TextView
+            android:id="@+id/tvIngredientName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/lato_light"
+            android:textColor="@color/black"
+            android:textSize="@dimen/list_title_recipe"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cardView3"
+            tools:text="Sugar" />
 
-    <TextView
-        android:id="@+id/tvUnit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/lato_light"
-        app:layout_constraintStart_toEndOf="@+id/tvIngredientCount"
-        app:layout_constraintTop_toBottomOf="@+id/tvIngredientName"
-        android:textSize="8sp"
-        android:layout_marginStart="2dp"
-        tools:text="g" />
+        <TextView
+            android:id="@+id/tvIngredientCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/lato_light"
+            android:textSize="8sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvIngredientName"
+            tools:text="55" />
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/tvUnit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="2dp"
+            android:fontFamily="@font/lato_light"
+            android:textSize="8sp"
+            app:layout_constraintStart_toEndOf="@+id/tvIngredientCount"
+            app:layout_constraintTop_toBottomOf="@+id/tvIngredientName"
+            tools:text="g" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
