--- a/app/src/main/res/layout/recipe_item.xml
+++ b/app/src/main/res/layout/recipe_item.xml
@@ -1,80 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cardView"
-    android:layout_width="wrap_content"
-    android:layout_height="250dp"
-    android:layout_marginEnd="5dp"
-    android:layout_marginBottom="5dp"
-    app:cardBackgroundColor="@color/grey"
-    app:cardCornerRadius="@dimen/corner_radius">
+<layout>
+    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/cardView"
+        android:layout_width="wrap_content"
+        android:layout_height="250dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        app:cardBackgroundColor="@color/grey"
+        app:cardCornerRadius="@dimen/corner_radius">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/light_peach">
-
-        <ImageView
-            android:id="@+id/ivRecipe"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/container"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_margin="8dp"
-            android:contentDescription="@string/recipe_image"
-            android:scaleType="centerCrop"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@tools:sample/backgrounds/scenic" />
+            android:layout_height="match_parent"
+            android:background="@color/light_peach">
 
-        <TextView
-            android:id="@+id/tvTitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_start_top"
-            android:layout_marginTop="7dp"
-            android:layout_marginEnd="8dp"
-            android:fontFamily="@font/lato_light"
-            android:textAppearance="?attr/textAppearanceBody2"
-            android:textSize="@dimen/list_title_recipe"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/roundedShape"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ivRecipe"
-            tools:text="Pasta" />
+            <ImageView
+                android:id="@+id/ivRecipe"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_margin="8dp"
+                android:contentDescription="@string/recipe_image"
+                android:scaleType="centerCrop"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:src="@tools:sample/backgrounds/scenic" />
 
-        <ImageView
-            android:id="@+id/roundedShape"
-            android:layout_width="55dp"
-            android:layout_height="25dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:src="@drawable/rounded"
-            app:layout_constraintBottom_toBottomOf="@+id/container"
-            app:layout_constraintEnd_toEndOf="@+id/container"
-            app:layout_constraintStart_toEndOf="@+id/tvTitle" />
+            <TextView
+                android:id="@+id/tvTitle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_start_top"
+                android:layout_marginTop="7dp"
+                android:layout_marginEnd="8dp"
+                android:fontFamily="@font/lato_light"
+                android:textAppearance="?attr/textAppearanceBody2"
+                android:textSize="@dimen/list_title_recipe"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toStartOf="@+id/roundedShape"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ivRecipe"
+                tools:text="Pasta" />
 
-        <ImageView
-            android:id="@+id/readHeart"
-            android:layout_width="17dp"
-            android:layout_height="17dp"
-            android:layout_marginStart="5dp"
-            android:src="@drawable/read_heart"
-            app:layout_constraintBottom_toBottomOf="@+id/roundedShape"
-            app:layout_constraintStart_toStartOf="@+id/roundedShape"
-            app:layout_constraintTop_toTopOf="@+id/roundedShape" />
+            <ImageView
+                android:id="@+id/roundedShape"
+                android:layout_width="55dp"
+                android:layout_height="25dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:src="@drawable/rounded"
+                app:layout_constraintBottom_toBottomOf="@+id/container"
+                app:layout_constraintEnd_toEndOf="@+id/container"
+                app:layout_constraintStart_toEndOf="@+id/tvTitle" />
 
-        <TextView
-            android:id="@+id/tvLikes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="3dp"
-            app:layout_constraintBottom_toBottomOf="@+id/roundedShape"
-            app:layout_constraintStart_toEndOf="@+id/readHeart"
-            app:layout_constraintTop_toTopOf="@+id/roundedShape"
-            tools:text="55" />
+            <ImageView
+                android:id="@+id/readHeart"
+                android:layout_width="17dp"
+                android:layout_height="17dp"
+                android:layout_marginStart="5dp"
+                android:src="@drawable/red_heart"
+                app:layout_constraintBottom_toBottomOf="@+id/roundedShape"
+                app:layout_constraintStart_toStartOf="@+id/roundedShape"
+                app:layout_constraintTop_toTopOf="@+id/roundedShape" />
+
+            <TextView
+                android:id="@+id/tvLikes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="3dp"
+                app:layout_constraintBottom_toBottomOf="@+id/roundedShape"
+                app:layout_constraintStart_toEndOf="@+id/readHeart"
+                app:layout_constraintTop_toTopOf="@+id/roundedShape"
+                tools:text="55" />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</com.google.android.material.card.MaterialCardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.card.MaterialCardView>
+</layout>
